Fixed z-index so label shows up above everything else

--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ select::-ms-expand { /* for IE 11 */
 }
 
 .lineLabel {
+	z-index: 10;
 	margin-left: 20px;
 	margin-bottom: 20px;
 	font-weight:bold;
